[tool.poetry]
name = "topognn"
version = "0.1.0"
description = "Topological Graph Neural Networks"
authors = []

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
torch = "==1.7.1"
torch-geometric = {version = "==1.6.3", allow-prereleases = true}  # Depends on some prerelease packages
torch-cluster = [
    { url = "https://pytorch-geometric.com/whl/torch-1.7.0/torch_cluster-latest+cpu-cp37-cp37m-macosx_10_9_x86_64.whl", platform = "darwin", optional = true },
    { url = "https://pytorch-geometric.com/whl/torch-1.7.0/torch_cluster-latest+cu102-cp37-cp37m-linux_x86_64.whl", platform = "linux", optional = true }
]
torch-scatter = [
    { url = "https://pytorch-geometric.com/whl/torch-1.7.0/torch_scatter-latest+cpu-cp37-cp37m-macosx_10_9_x86_64.whl", platform = "darwin", optional = true},
    { url = "https://pytorch-geometric.com/whl/torch-1.7.0/torch_scatter-latest+cu102-cp37-cp37m-linux_x86_64.whl", platform = "linux", optional = true}
]
torch-sparse = [
    { url = "https://pytorch-geometric.com/whl/torch-1.7.0/torch_sparse-latest+cpu-cp37-cp37m-macosx_10_9_x86_64.whl", platform = "darwin", optional = true },
    { url = "https://pytorch-geometric.com/whl/torch-1.7.0/torch_sparse-latest+cu102-cp37-cp37m-linux_x86_64.whl", platform = "linux", optional = true }
]
torch-spline-conv = [
    { url = "https://pytorch-geometric.com/whl/torch-1.7.0/torch_spline_conv-latest+cpu-cp37-cp37m-macosx_10_9_x86_64.whl", platform = "darwin", optional = true },
    { url = "https://pytorch-geometric.com/whl/torch-1.7.0/torch_spline_conv-latest+cu102-cp37-cp37m-linux_x86_64.whl", platform = "linux",  optional = true }
]
pytorch-lightning = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
